Corrected spacing on Steve Jobs' name

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -175,7 +175,7 @@ section {
     display: inline-block;
     text-align: left;
     margin-top: 0px;
-    margin-left: 75px;
+    margin-left: 1200px;
     font-family: "HelveticaNeue-Medium", Helvetica, Arial, serif;
     font-size: 26px;
     float: left;
